--- a/index.css
+++ b/index.css
@@ -37,3 +37,10 @@ button{
     border-radius:15px;
     padding:10px;
 }
+img{
+    height:200px;
+    width:200px;
+    margin-left:50px;
+    border-radius:30px;
+    margin-top:20px;
+}
